--- a/css/style.css
+++ b/css/style.css
@@ -228,4 +228,11 @@ footer {
     height: 100vh;
     width: 100%;
   }
+  #menu li{
+        padding-right: 8px;
+        font-size: 11px;
+    }
+   #navimg{
+        width:80px;
+   }
 }
