--- a/css/style.css
+++ b/css/style.css
@@ -228,11 +228,14 @@ footer {
     height: 100vh;
     width: 100%;
   }
-  #menu li{
-        padding-right: 8px;
-        font-size: 11px;
+  #menu{
+        top:20%;
     }
-   #navimg{
+    #menu li{
+        padding-right: 8px;
+        font-size: 12px;
+    }
+    #navimg{
         width:80px;
-   }
+    }
 }
